# sorter

./: LICENSE  README.md  locations.example.json  pyproject.toml  requirements.txt
photo_sorter/: __init__.py  __main__.py  cli.py  config.py  exif_reader.py  file_ops.py  geocode.py  location_matcher.py
photo_sorter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_config.py  test_exif_reader.py  test_file_ops.py  test_geocode.py  test_location_matcher.py
